<resources>
    <string name="app_name">NexChat</string>
    <string name="facebook_app_id">1232385814820611</string>
    <string name="facebook_client_token">f4672efa7ec255ae0cd5bde87bcfed5a</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="chats">Conversations</string>
    <string name="no_conversations_found">No conversations found.</string>
    <string name="chat_with">Chat with %1$s</string>
    <string name="password_reset_email_sent">Password reset email sent</string>
    <string name="no_users_found">No users found.</string>
    <string name="unknown_error">Unknown error occurred!</string>
    <string name="user_list">Users</string>
    <string name="profile_settings">Profile</string>
    <string name="create_your_nexchat_account">Create Your NEXChat Account</string>
    <string name="password_caption">Password</string>
    <string name="confirm_password_caption">Confirm Password</string>
    <string name="sign_up_caption">Sign Up</string>
    <string name="already_have_an_account_caption">Already have an account?</string>
    <string name="sign_in_caption2">" Sign In"</string>
    <string name="have_no_account_caption">Have no account?</string>
    <string name="sign_up_caption2">" Sign up"</string>
    <string name="sign_in_caption">Sign In</string>
    <string name="forgot_password_caption">Forgot password?</string>
    <string name="forgot_password_screen_caption">Enter your email to receive a reset link.</string>
    <string name="email_caption">Email</string>
    <string name="submit_caption">Submit</string>
    <string name="no_messages_yet_caption">No messages yet</string>
    <string name="type_a_message_caption">Type a message</string>
    <string name="google_id_token_is_blank_message">Google ID Token is blank.</string>
    <string name="invalid_credential_type_returned_message">Invalid credential type returned.</string>
    <string name="display_name_caption">Display Name</string>
    <string name="save_changes_caption">Save Changes</string>
    <string name="bio_caption">Bio</string>
    <string name="open_camera_caption">Open Camera</string>
    <string name="select_from_gallery_caption">Select from Gallery</string>
    <string name="choose_option_caption">Choose Option</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="signout_caption">SignOut</string>
    <string name="unknown_user">Unknown user</string>
    <string name="no_chats_yet_title">No chats yet.</string>
    <string name="start_a_new_conversation_and_make_nexchat_feel_like_home_text">Start a new conversation and make\nNEXChat feel like home.</string>
    <string name="welcome_to_nexchat_title">Welcome to NEXChat</string>
    <string name="connect_with_friends_and_family_anytime_anywhere_text">Connect with friends and family anytime, anywhere.</string>
</resources>