...
                .fillMaxWidth()
                .verticalScroll(rememberScrollState()),
            horizontalAlignment = Alignment.CenterHorizontally
        ) {
            Image(
                painter = painterResource(id = R.drawable.loading_items),
                contentDescription = "Top Image",
                modifier = Modifier.size(180.dp)
            )

            Spacer(Modifier.height(24.dp))

            Box(
...
